force-app/main/default/objects/Regulatory_Decision_Type__e/Regulatory_Decision_Type__e.object-meta.xml
<CustomObject>
    <label>Regulatory Decision Type</label>
    <pluralLabel>Regulatory Decision Types</pluralLabel>
</CustomObject>