force-app/main/default/objects/Regulatory_Decision_Type__e/fields/Decision_Type_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Type_Effective_Date__c</fullName>
    <label>Decision Type Effective Date</label>
    <type>Date</type>
</CustomField>