force-app/main/default/objects/Regulatory_Decision_Type__e/fields/Default_Star_Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Star_Rating_Value__c</fullName>
    <label>Default Star Rating Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>