force-app/main/default/objects/Regulatory_Decision_Type__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Regulatory Decision Sub-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>