force-app/main/default/objects/Regulatory_Decision_Type__e/fields/RegDecTypeExtId__c.field-meta.xml
<CustomField>
    <fullName>RegDecTypeExtId__c</fullName>
    <label>RegDecisiontype ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>