force-app/main/default/objects/Regulatory_Decision_Type__e/fields/Service_Compliance_Rating_Effect__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating_Effect__c</fullName>
    <label>Service Compliance Rating Effect</label>
    <length>50</length>
    <type>Text</type>
</CustomField>